@@ -28,6 +28,9 @@ pages).}
 \twocolitem{msw.staticbitmap.htclient}{If set to 1, allows the static bitmap to respond to mouse
 events. The default is 0, since a value of 1 can interfere with refresh in static boxes. Note that once set,
 this option cannot be unset later in the application.}
+\twocolitem{msw.staticbox.optimized-paint}{If set to 0, switches off optimized wxStaticBox painting.
+Setting this to 0 causes more flicker, but allows applications to paint graphics on the parent of a static box
+(the optimized refresh causes any such drawing to disappear).}
 \end{twocollist}
 
 \wxheading{Mac}
