@@ -47,6 +47,9 @@ enum
 
 class WXDLLEXPORT wxWindowMSW : public wxWindowBase
 {
+    friend class wxSpinCtrl;
+    friend class wxSlider;
+    friend class wxRadioBox;
 public:
     wxWindowMSW() { Init(); }
 
@@ -540,6 +543,18 @@ WX_DECLARE_HASH(wxWindowMSW, wxWindowList, wxWinHashTable);
 #endif
 
 extern wxWinHashTable *wxWinHandleHash;
+
+// ----------------------------------------------------------------------------
+// extra data needed for correcting problems with deferred positioning
+// ----------------------------------------------------------------------------
+
+struct wxExtraWindowData
+{
+    // Stored during deferred positioning
+    wxPoint m_pos;
+    wxSize  m_size;
+    bool    m_deferring:1;
+};
 
 #endif
     // _WX_WINDOW_H_
